examples/core/src/main/java/org/jbehave/examples/core/stories/failing/FailingBeforeAfter.java
package org.jbehave.examples.core.stories.failing;

import org.jbehave.examples.core.FailingBeforeAfterCoreStory;

public class FailingBeforeAfter extends FailingBeforeAfterCoreStory {
    
}
